Bug 495754 - [regression] Blank icons in system tray
Summary: [regression] Blank icons in system tray
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: HI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-11-03 16:36 UTC by Jesse Litton
Modified: 2024-11-11 13:07 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Tray icons, with missing icons indicated via red boxes. (14.01 KB, image/png)
2024-11-03 16:36 UTC, Jesse Litton
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jesse Litton 2024-11-03 16:36:05 UTC
Created attachment 175491 [details]
Tray icons, with missing icons indicated via red boxes.

SUMMARY

In the last week or so, a regression has been introduced that causes a very few apps to fail to render their system tray icons.

STEPS TO REPRODUCE
1. Use kde-builder to build workspace from latest source.
2.  Install the current version of one of the affected apps.  There may be more, but here are two I've noticed:
      - Steam
      - Betterbird
3. Notice that the tray icons are blank.

OBSERVED RESULT

   There are gaps where the application icons would be:  https://i.imgur.com/YM85oTH.png

   If you hover over them, you can still access them and their context menus, but the icons are never drawn.

   There don't appear to be any errors logged when I run the apps from the console.

EXPECTED RESULT

   Until the last week, all apps were drawing their icons normally.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 6.3 Dev
KDE Plasma Version: 6.2.80
KDE Frameworks Version: 6.9.0
Qt Version: 6.7.3

ADDITIONAL INFORMATION
   - Tested with X11.
   - nVidia 560.35.03 video drivers w/RTX 2070 Super.
   - Ubuntu Plucky Puffin (devel repos) base with plasma built from source (tested with --refresh-build; same results).  Same system/build process I've been using successfully for months.
   - Tested with multiple themes/icon sets; same results.
   - No other plasma issues - just these couple of missing icons for specific apps.
Comment 1 Konrad Materka 2024-11-04 10:45:40 UTC
can it be related to this?
https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4878
Comment 2 Nate Graham 2024-11-04 19:02:06 UTC
Could be, that would suck. I can reproduce the issue myself with Steam.
Comment 3 Nate Graham 2024-11-04 19:03:56 UTC
Yup, that was it.
Comment 4 Bug Janitor Service 2024-11-06 16:19:42 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4896
Comment 5 David Redondo 2024-11-07 10:18:28 UTC
Git commit 41d8bb43f6697b2cd5d3fd57790b9c35d69b11a8 by David Redondo.
Committed on 07/11/2024 at 09:58.
Pushed by davidre into branch 'master'.

systemtray: Check if an icon can be located when appending symbolic

An app icon directory can either contain icon theme folder structure
or be a directory containing files to be used as icons. In the latter
case (extraSeachPath in KIconLoader speak) there is no fallback done
as there's no icon theme to do fallback in. So check if an icon can
be loaded when "symbolic" is appended before doing so.

M  +2    -3    applets/systemtray/statusnotifieritemsource.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/41d8bb43f6697b2cd5d3fd57790b9c35d69b11a8
Comment 6 Jesse Litton 2024-11-07 18:06:02 UTC
The latest commit fixed Steam, but leaves Betterbird (https://github.com/Betterbird) still broken.
Comment 7 Bug Janitor Service 2024-11-11 10:49:59 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4903
Comment 8 Bug Janitor Service 2024-11-11 10:50:01 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4903
Comment 9 David Redondo 2024-11-11 11:19:07 UTC
Git commit 970ec45579d7863198876c09e990c0fc9e323a15 by David Redondo.
Committed on 11/11/2024 at 10:49.
Pushed by davidre into branch 'master'.

systemtray: Don't mess with absolute icon paths

M  +1    -1    applets/systemtray/statusnotifieritemsource.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/970ec45579d7863198876c09e990c0fc9e323a15
Comment 10 Jesse Litton 2024-11-11 13:07:55 UTC
Confirmed as fixed!  Thanks.