applets/systemtray/statusnotifieritemsource.cpp
@@ -309,9 +309,8 @@ void StatusNotifierItemSource::refreshCallback(QDBusPendingCallWatcher *call)
         }
 
         auto loadIcon = [this, &properties, &overlay](const QString &iconKey, const QString &pixmapKey) -> std::tuple<QIcon, QString> {
-            QString iconName = properties[iconKey].toString();
-            if (!iconName.isEmpty()) {
-                if (!iconName.endsWith(QStringLiteral("-symbolic"))) {
+            if (QString iconName = properties[iconKey].toString(); !iconName.isEmpty()) {
+                if (iconLoader()->hasIcon(iconName + QStringLiteral("-symbolic"))) {
                     iconName += QStringLiteral("-symbolic");
                 }
                 QIcon icon = QIcon(new KIconEngine(iconName, KIconColors(Plasma::Theme::globalPalette()), iconLoader(), {m_overlayIconName}));
